--- a/margin-and-padding/02-margin-and-padding-2/style.css
+++ b/margin-and-padding/02-margin-and-padding-2/style.css
@@ -11,17 +11,30 @@ body {
 
 .title {
   background: #e3f4ff;
+  border: 8px solid white;
+  margin: 0px;
+  font-size: 20px;
+  font-weight: 800;
+  padding: 10px;
 }
 
 .content {
   background: #e3f4ff;
+  border: 8px solid white;
+  padding: 10px;
 }
 
 .button-container {
+  text-align: center;
   background: #e3f4ff;
+  border: 8px solid white;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
 button {
+  display:block;
+  margin: 0 auto;
   background: white;
-  border: 1px solid #eee;
+  border: 5px solid #ffffff;
 }
