--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,11 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display:flex;
+  flex-direction: column;
+  gap:50px;
+  padding: 20px;
+  padding-left: 50px;
+  padding-right: 50px;
 }
 
 img {
@@ -10,6 +16,8 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-right:auto;
+  margin-left:auto;
 }
 
 /* do not edit this footer */
@@ -23,4 +31,14 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+.imgs{
+  display:flex;
+  gap:30px;
+}
+.text{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
