--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,10 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+*{
+  outline:8px red;
+}
 body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -13,9 +19,15 @@ img {
 
 button {
   font-family: Roboto, sans-serif;
-  border: none;
+  border: 4px solid #eee;
+  margin: 4px;
   border-radius: 8px;
   background: #eee;
+}
+.buttons{
+  display:flex;
+  padding: 10px;
+  gap:8px;
 }
 
 input {
@@ -23,4 +35,41 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+ul{
+  list-style-type: none;
+}
+a {
+  text-decoration: none;
+  color: rgb(45, 45, 45);
+}
+.header, .footer{
+  display: flex;
+  padding: 5px;
+}
+.footer{
+  background-color: #eee;
+  margin-top: auto;
+}
+.header{
+  margin-bottom: auto;
+}
+.right-links, .left-links{
+  display: flex;
+  gap:8px;
+  padding: 0;
+}
+.right-links{
+  margin-left: auto;
+  margin-right: 8px;
+}
+.left-links{
+  margin-right: auto;
+  margin-left: 8px;
+}
+.content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
