--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,9 +2,20 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+.content{
+  display: flex;
+  flex:1;
 }
 
 .header {
+  align-items: center;
+  display: flex;
+  padding-left: 16px;
+  font-weight: 1000;
+  font-size: 30px;
   height: 72px;
   background: darkmagenta;
   color: white;
@@ -13,6 +24,9 @@ body {
 .footer {
   height: 72px;
   background: #eee;
+  align-items: center;
+  display: flex;
+  justify-content: center;
   color: darkmagenta;
 }
 
@@ -20,10 +34,40 @@ body {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  flex-grow:1;
+  font-weight: 450;
+  padding: 10px;
+  flex-basis:200px;
+}
+.cards{
+  margin-right: auto;
+  padding: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  gap:32px;
+}
+a{
+  text-decoration: none;
+  color: white;
+}
+ul{
+  padding-left: 20px;
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+}
+li{
+  font-size: 18px;
+  margin: 0 0 0 0;
+  list-style: none;
 }
