--- a/grid/01-grid-layout-1/style.css
+++ b/grid/01-grid-layout-1/style.css
@@ -2,9 +2,15 @@ body,
 html {
   height: 100%;
   margin: 0;
+  padding: 0;
 }
 
 .container {
+  display: inline-grid;
+  grid-template-columns: 465px 1395px;
+  gap: 25px;
+  padding: 25px;
+  grid-template-rows: 115px 115px 460px 115px;
   text-align: center;
   height: 100%;
   padding: 16px;
@@ -21,22 +27,32 @@ html {
 }
 
 .header {
+  grid-row: 1/2;
+  grid-column: 1/3;
   background-color: #006157;
 }
 
 .sidebar {
+  grid-row: 2/4;
+  grid-column: 1/2;
   background-color: #005B94;
 }
 
 .nav {
+  grid-row: 2/3;
+  grid-column: 2/3;
   background-color: #642cde;
 }
 
 .article {
+  grid-row: 3/4;
+  grid-column: 2/3;
   background-color: #7E1DC3;
 }
 
 .footer {
+  grid-row: 4/5;
+  grid-column: 1/3;
   background-color: #393f4d;
 }
 
